# opencv_detector

./: CMakeLists.txt  README.md  main.cpp
opencv_dnn/: CMakeLists.txt  cv_dnn_ultraface.cpp  cv_dnn_ultraface.h
